Tried making the to-do items be added in local storage but is still not reflecting

--- a/Components/Layout/MainLayout.razor.css
+++ b/Components/Layout/MainLayout.razor.css
@@ -94,3 +94,12 @@ main {
         right: 0.75rem;
         top: 0.5rem;
     }
+
+.info {
+    display: flex;
+    align-items: center;
+}
+
+h1 {
+    color: maroon;
+}
