--- a/Components/Todo/AddNewTodo.razor
+++ b/Components/Todo/AddNewTodo.razor
@@ -1,5 +1,5 @@
 <input
-    class="todo-input"
+    class="bg-white border-solid border-pink-800 h-65 italic mb-8 items-center"
     @bind="newTodo"
     @onkeydown="@(e => AddTodo(e))"
     placeholder="What needs to be done"
