--- a/Components/App.razor
+++ b/Components/App.razor
@@ -5,13 +5,13 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <base href="/" />
-    <link rel="stylesheet" href="/styles/app.css" />
-    @* <link rel="stylesheet" href="BlazorTodoApp.styles.css" /> *@
+    <link rel="stylesheet" href="/dist/app.css" />
+    <link rel="stylesheet" href="BlazorTodoApp.styles.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
     <HeadOutlet />
 </head>
 
-<body class="relative flex min-h-screen justify-center">
+<body class="bg-gray-100">
     <Routes />
     <script src="_framework/blazor.web.js"></script>
     <script src="/dist/app.js"></script>
