--- a/Components/App.razor
+++ b/Components/App.razor
@@ -14,7 +14,7 @@
 <body class="bg-gray-100">
     <Routes />
     <script src="_framework/blazor.web.js"></script>
-    <script src="/dist/app.js"></script>
+    @* <script src="/dist/app.js"></script> *@
 </body>
 
 </html>
