Applied the concept of Blazor templates to Todo component.

--- a/Components/App.razor
+++ b/Components/App.razor
@@ -7,11 +7,12 @@
     <base href="/" />
     <link rel="stylesheet" href="/dist/app.css" />
     <link rel="stylesheet" href="BlazorTodoApp.styles.css" />
+    <link rel="stylesheet" href="/styles/styles.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
     <HeadOutlet />
 </head>
 
-<body class="bg-gray-100">
+<body>
     <Routes />
     <script src="_framework/blazor.web.js"></script>
     @* <script src="/dist/app.js"></script> *@
