--- a/Components/Controls/TodoInput.razor
+++ b/Components/Controls/TodoInput.razor
@@ -1,7 +1,7 @@
-@* <input
+<input class="input"
     type="text"
-    placeholder="What needs to be done"
+    placeholder="What needs to be done?"
     @onkeypress="OnTodoInputKeyPress"
     @bind-value="CurrentTodo"  
     @bind-value:event="oninput"      
-> *@
+>
