--- a/Components/_Imports.razor
+++ b/Components/_Imports.razor
@@ -9,4 +9,4 @@
 @using BlazorTodoApp
 @using BlazorTodoApp.Components
 @using BlazorTodoApp.Components.Controls
-@using blazortodoapp.Models;
+@using blazortodoapp.Models
