--- a/Components/Layout/MainLayout.razor
+++ b/Components/Layout/MainLayout.razor
@@ -1,16 +1,17 @@
 ﻿@inherits LayoutComponentBase
 
-<div class="page">
+@* <div class="page">
     
     <main>
         <article class="content px-4">
             @Body
         </article>
     </main>
-</div>
+</div> *@
+@Body
 
-<div id="blazor-error-ui">
+@* <div id="blazor-error-ui">
     An unhandled error has occurred.
     <a href="" class="reload">Reload</a>
     <a class="dismiss">🗙</a>
-</div>
+</div> *@
