--- a/Components/Layout/MainLayout.razor.css
+++ b/Components/Layout/MainLayout.razor.css
@@ -1,4 +1,4 @@
-.page {
+/* .page {
     position: relative;
     display: flex;
     flex-direction: column;
@@ -95,4 +95,19 @@ main {
         top: 0.5rem;
     }
 
+
+
+
+    *{
+        padding: 0;
+        margin: 0;
+    }
     
+    .wrapper{
+        display: flex;
+    }
+    
+    h1{
+        color: red;
+    }
+     */
