Active items and Clearing of all inactive items working now in footer

--- a/Components/Controls/TodoFooter.razor
+++ b/Components/Controls/TodoFooter.razor
@@ -1,15 +1,9 @@
 <footer class="info">
     <span class="todo-count">@GetUncompletedItemsCount() item left!</span>
     <ul class="filters">
-        <li class="filter">
-            <a class="selected" href="#/">All</a>
-        </li>
-        <li class="filter">
-            <a href="#/active">Active</a>
-        </li>
-        <li class="filter">
-            <a href="#/completed">Completed</a>
-        </li>
+        <li class="filter" @onclick="@(() => HandleFilterClick("All"))">All</li>
+        <li class="filter" @onclick="@(() => HandleFilterClick("Active"))">Active</li>
+        <li class="filter" @onclick="@(() => HandleFilterClick("Completed"))">Completed</li>
     </ul>
-    <button class="clear-completed">Clear completed</button>
+    <button class="clear-completed" @onclick="ClearCompletedItems">Clear completed</button>
 </footer>
