--- a/Components/Controls/TodoList.razor
+++ b/Components/Controls/TodoList.razor
@@ -1,7 +1,9 @@
 <main class="main">
     <ul class="todo-list">
-        @foreach(var (id, todoItem) in Items)
+        @foreach (var pair in FilterItems(Items))
         {
+            var id = pair.Key;
+            var todoItem = pair.Value;
             if(ItemTemplate is null)
             {
                 <li>Please provide a Template</li>
