--- a/Components/Pages/Home.razor
+++ b/Components/Pages/Home.razor
@@ -17,7 +17,7 @@
                 <Todo TemplateData="TemplateData"/>
             </ItemTemplate>
         </TodoList>
-        <TodoFooter Items="TodoItems" OnItemRemove="OnTodoItemRemove" TotalItems="TodoItems.Count" ActiveItems="TodoItems.Values.Count(item => !item.IsDone)" CompletedItems="TodoItems.Values.Count(item => item.IsDone)" />
+        <TodoFooter Items="TodoItems" OnItemRemove="OnTodoItemRemove" />
     </div>
 </div>
 
@@ -26,6 +26,8 @@
     public TodoStorageService TodoStorageService { get; set; } = default!;
 
     protected Dictionary<int, TodoItem> TodoItems { get; set; } = [];
+
+    protected string filter = "All"; // test code
     
     protected override async Task OnAfterRenderAsync(bool firstRender)
     {
