--- a/Components/Controls/TodoInput.razor
+++ b/Components/Controls/TodoInput.razor
@@ -1,7 +1,9 @@
-<input class="input"
+<input
+    class="input-field"
     type="text"
     placeholder="What needs to be done?"
     @onkeypress="OnTodoInputKeyPress"
     @bind-value="CurrentTodo"  
     @bind-value:event="oninput"      
 >
+
