--- a/Components/App.razor
+++ b/Components/App.razor
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/dist/app.css" />
     <link rel="stylesheet" href="BlazorTodoApp.styles.css" />
     <link rel="stylesheet" href="/styles/styles.css" />
-    <link rel="icon" type="image/png" href="favicon.png" />
+    <link rel="icon" type="image/png" href="note.icon.png" />
     <HeadOutlet />
 </head>
 
