--- a/Components/Controls/Todo.razor
+++ b/Components/Controls/Todo.razor
@@ -12,15 +12,17 @@
         else
         {
             <li class="todo-li" @ondblclick="OnTodoItemDbClick">
-                <input 
+                <div class="li-left">
+                    <input 
                     class="input-check checkbox-round"
                     type="checkbox"
                     @onclick:stopPropagation="true"
                     @ondblclick:stopPropagation="true"
                     @onchange="OnTodoItemInputCheckChanged"
                     checked="@Item.IsDone"
-                >
-                <span>@Item.Title</span>
+                    >
+                    <span>@Item.Title</span>
+                </div>
                 <span class="todo-delete" @onclick="OnTodoItemRemove">x</span>
             </li>
         }
