--- a/Components/Pages/Home.razor
+++ b/Components/Pages/Home.razor
@@ -9,7 +9,7 @@
 <PageTitle>To-do List App</PageTitle>
 
 <div class="wrapper">
-    <h1 class="text-center mb-4">todos</h1>
+    <h1>todos</h1>
     <div class="todoapp">
         <TodoInput OnSave="OnTodoInputSave" />
         <TodoList Items="TodoItems" OnChanged="OnTodoListChanged" Filter="@filter">
