--- a/wwwroot/styles/styles.css
+++ b/wwwroot/styles/styles.css
@@ -3,8 +3,8 @@ body{
     font-weight: 300;
     display: flex;
     justify-content: center;
-    padding: 2rem;
-    background: #f5f5f5d6;
+    padding: 1.5rem;
+    background: #eae9e9d6;
 }
 
 .wrapper{
@@ -19,7 +19,7 @@ body{
 }
 
 h1{
-    font-size: 80px;
+    font-size: 70px;
     font-weight: 152;
     color: #b83f45;
     margin-bottom: 20px;
@@ -49,7 +49,7 @@ h1{
 }
 
 .todo-list{
-    color: rgb(76, 75, 75);
+    color: rgb(79, 78, 78);
     text-align: left;
 }
 
@@ -77,9 +77,14 @@ h1{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin-left: 20px;
+    margin-left: 10px;
 
 }
+
+    .completed {
+        text-decoration: line-through;
+        color: rgb(114, 113, 113);
+    }
 
 .input-edit{
     min-width: 700px;
@@ -110,7 +115,6 @@ h1{
 
     .checkbox-round:checked {
         border: 1px solid green;
-
     }
 
 .info{
@@ -118,6 +122,7 @@ h1{
     justify-content: space-between;
     align-items: center;
     font-size: 15px;
+    font-weight: 300;
     height: 50px;
     border-top: 1px rgb(199, 197, 197) solid;
     color: rgb(79, 78, 78);
